--- a/assets/component-card.css
+++ b/assets/component-card.css
@@ -83,9 +83,9 @@
 
 .card__media,
 .card .media {
-  bottom: 0;
+  /* bottom: 0;
   position: absolute;
-  top: 0;
+  top: 0; */
 }
 
 .card .media {
@@ -112,14 +112,14 @@
 
 .card__content {
   display: grid;
-  grid-template-rows: minmax(0,1fr) max-content minmax(0,1fr);
+  grid-template-rows: minmax(0, 1fr) max-content minmax(0, 1fr);
   padding: 1rem;
   width: 100%;
   flex-grow: 1;
 }
 
 .card__content--auto-margins {
-  grid-template-rows: minmax(0,auto) max-content minmax(0,auto);
+  grid-template-rows: minmax(0, auto) max-content minmax(0, auto);
 }
 
 .card__information {
@@ -127,8 +127,8 @@
   padding: 1.3rem 1rem;
 }
 
-.card:not(.ratio) > .card__content {
-  grid-template-rows: max-content minmax(0,1fr) max-content auto;
+.card:not(.ratio)>.card__content {
+  grid-template-rows: max-content minmax(0, 1fr) max-content auto;
 }
 
 @media screen and (min-width: 750px) {
@@ -153,7 +153,7 @@
   justify-self: flex-end;
 }
 
-.card:not(.card--horizontal) > .card__content > .card__badge {
+.card:not(.card--horizontal)>.card__content>.card__badge {
   margin: 1.3rem;
 }
 
@@ -164,7 +164,7 @@
   width: 100%;
 }
 
-.card__inner:not(.ratio) > .card__content {
+.card__inner:not(.ratio)>.card__content {
   height: 100%;
 }
 
@@ -183,7 +183,7 @@
   font-size: calc(var(--font-heading-scale) * 1.2rem);
 }
 
-.card--horizontal .card-information > *:not(.visually-hidden:first-child) + *:not(.rating) {
+.card--horizontal .card-information>*:not(.visually-hidden:first-child)+*:not(.rating) {
   margin-top: 0;
 }
 
@@ -192,6 +192,7 @@
 }
 
 @media only screen and (min-width: 750px) {
+
   .card--horizontal .card__heading,
   .card--horizontal .price__container .price-item,
   .card--horizontal__quick-add {
@@ -199,7 +200,7 @@
   }
 }
 
-.card--card.card--media > .card__content {
+.card--card.card--media>.card__content {
   margin-top: calc(0rem - var(--image-padding));
 }
 
@@ -246,23 +247,22 @@
 }
 
 @media screen and (min-width: 990px) {
-  .card .media.media--hover-effect > img:only-child,
-  .card-wrapper .media.media--hover-effect > img:only-child {
+
+  .card .media.media--hover-effect>img:only-child,
+  .card-wrapper .media.media--hover-effect>img:only-child {
     transition: transform var(--duration-long) ease;
   }
 
-  .card:hover .media.media--hover-effect > img:first-child:only-child,
-  .card-wrapper:hover .media.media--hover-effect > img:first-child:only-child {
+  .card:hover .media.media--hover-effect>img:first-child:only-child,
+  .card-wrapper:hover .media.media--hover-effect>img:first-child:only-child {
     transform: scale(1.03);
   }
 
-  .card-wrapper:hover
-    .media.media--hover-effect
-    > img:first-child:not(:only-child) {
+  .card-wrapper:hover .media.media--hover-effect>img:first-child:not(:only-child) {
     opacity: 0;
   }
 
-  .card-wrapper:hover .media.media--hover-effect > img + img {
+  .card-wrapper:hover .media.media--hover-effect>img+img {
     opacity: 1;
     transition: transform var(--duration-long) ease;
     transform: scale(1.03);
@@ -275,25 +275,25 @@
 }
 
 .card--standard.card--media .card__inner .card__information,
-.card--standard.card--text:not(.card--horizontal) > .card__content .card__heading,
-.card--standard:not(.card--horizontal) > .card__content .card__badge,
-.card--standard.card--text.article-card > .card__content .card__information,
-.card--standard > .card__content .card__caption {
+.card--standard.card--text:not(.card--horizontal)>.card__content .card__heading,
+.card--standard:not(.card--horizontal)>.card__content .card__badge,
+.card--standard.card--text.article-card>.card__content .card__information,
+.card--standard>.card__content .card__caption {
   display: none;
 }
 
-.card--standard > .card__content {
+.card--standard>.card__content {
   padding: 0;
 }
 
-.card--standard > .card__content .card__information {
+.card--standard>.card__content .card__information {
   padding-left: 0;
   padding-right: 0;
 }
 
 .card--card.card--media .card__inner .card__information,
 .card--card.card--text .card__inner,
-.card--card.card--media > .card__content .card__badge {
+.card--card.card--media>.card__content .card__badge {
   display: none;
 }
 
@@ -324,7 +324,7 @@
   overflow: hidden;
 }
 
-.card-information > * + * {
+.card-information>*+* {
   margin-top: 0.5rem;
 }
 
@@ -332,26 +332,24 @@
   width: 100%;
 }
 
-.card-information > * {
+.card-information>* {
   line-height: calc(1 + 0.4 / var(--font-body-scale));
   color: rgb(var(--color-foreground));
 }
 
-.card-information > .price {
+.card-information>.price {
   color: rgb(var(--color-foreground));
 }
 
-.card--horizontal .card-information > .price {
+.card--horizontal .card-information>.price {
   color: rgba(var(--color-foreground), 0.75);
 }
 
-.card-information > .rating {
+.card-information>.rating {
   margin-top: 0.4rem;
 }
 
-.card-information
-  > *:not(.visually-hidden:first-child)
-  + *:not(.rating) {
+.card-information>*:not(.visually-hidden:first-child)+*:not(.rating) {
   margin-top: 0.7rem;
 }
 
