--- a/sections/test-collection.liquid
+++ b/sections/test-collection.liquid
@@ -1,4 +1,8 @@
 <!-- Add init="false" -->
+{% assign mobileImage = block.settings.mobile_image %}
+{% assign mobileAlt = block.settings.mobile_alt %}
+{% assign desktopImage = block.settings.desktop_image %}
+{% assign desktopAlt = block.settings.desktop_alt %}
 
 <h1>{{ section.settings.heading }}</h1>
 <swiper-container init="false">
@@ -7,7 +11,8 @@
       {% if block.settings.image == blank %} placeholder{% endif %}
       <a href="">
         {% if block.settings.image %}
-          <img src="{{ block.settings.image | img_url: 'master'}}" width="100%">
+          <img class="slide-image" src="{{ mobileImage | img_url: 'master' }}" alt="{{ mobileAlt }}" width="100%">
+          <img class="slide-image" src="{{ desktopImage | img_url: 'master' }}" alt="{{ desktopAlt }}" width="100%">
         {% endif %}
       </a>
       <a href="">
@@ -36,13 +41,23 @@
       "settings": [
         {
           "type": "text",
-          "id": "title",
-          "label": "Title"
+          "id": "mobile_alt",
+          "label": "Mobile Alt"
         },
         {
           "type": "image_picker",
-          "id": "image",
-          "label": "Image"
+          "id": "mobile_image",
+          "label": "Mobile Image"
+        },
+        {
+          "type": "text",
+          "id": "desktop_alt",
+          "label": "Desktop Alt"
+        },
+        {
+          "type": "image_picker",
+          "id": "desktop_image",
+          "label": "Desktop Image"
         }
       ]
     }
