--- a/sections/test-collection.liquid
+++ b/sections/test-collection.liquid
@@ -1,9 +1,4 @@
 <!-- Add init="false" -->
-{% assign mobileImage = block.settings.mobile_image %}
-{% assign mobileAlt = block.settings.mobile_alt %}
-{% assign desktopImage = block.settings.desktop_image %}
-{% assign desktopAlt = block.settings.desktop_alt %}
-
 <h1>{{ section.settings.heading }}</h1>
 <swiper-container init="false">
   {% for block in section.blocks %}
@@ -11,12 +6,12 @@
       {% if block.settings.image == blank %} placeholder{% endif %}
       <a href="">
         {% if block.settings.image %}
-          <img class="slide-image" src="{{ mobileImage | img_url: 'master' }}" alt="{{ mobileAlt }}" width="100%">
-          <img class="slide-image" src="{{ desktopImage | img_url: 'master' }}" alt="{{ desktopAlt }}" width="100%">
+          <img
+            class="slide-image"
+            src="{{ block.settings.desktop_image | img_url: 'master' }}"
+            width="100%"
+          >
         {% endif %}
-      </a>
-      <a href="">
-        <h1>{{ block.settings.title }}</h1>
       </a>
     </swiper-slide>
   {% endfor %}
@@ -39,16 +34,6 @@
       "type": "column",
       "name": "slide",
       "settings": [
-        {
-          "type": "text",
-          "id": "mobile_alt",
-          "label": "Mobile Alt"
-        },
-        {
-          "type": "image_picker",
-          "id": "mobile_image",
-          "label": "Mobile Image"
-        },
         {
           "type": "text",
           "id": "desktop_alt",
