--- a/sections/test-slide.liquid
+++ b/sections/test-slide.liquid
@@ -1,24 +1,23 @@
 <!-- Add init="false" -->
-{% comment %}
-  {% assign mobileImage = block.settings.mobile_image %}
-  {% assign mobileAlt = block.settings.mobile_alt %}
-  {% assign desktopImage = block.settings.desktop_image %}
-  {% assign desktopAlt = block.settings.desktop_alt %}
-{% endcomment %}
+
+{% assign mobileImage = block.settings.mobile_image %}
+{% assign mobileAlt = block.settings.mobile_alt %}
+{% assign desktopImage = block.settings.desktop_image %}
+{% assign desktopAlt = block.settings.desktop_alt %}
 
 <h1>{{ section.settings.heading }}</h1>
-<swiper-container init="false">
+<swiper-container init="false" class="swiper-container-01">
   {% for block in section.blocks %}
     <swiper-slide>
       {% if block.settings.image == blank %} placeholder{% endif %}
       <a href="">
         {% if block.settings.image %}
           <img class="" src="{{ block.settings.mobile_image | img_url: 'master' }}" alt="" width="100%">
-          {% comment %} <img class="" src="{{ block.settings.desktop_image | img_url: 'master' }}" alt="" width="100%"> {% endcomment %}
+          <img class="" src="{{ block.settings.desktop_image | img_url: 'master' }}" alt="" width="100%">
         {% endif %}
       </a>
       <a href="">
-        <h1>{{ block.settings.title }}</h1>
+        <h1>{{ mobieAlt }}</h1>
       </a>
     </swiper-slide>
   {% endfor %}
@@ -81,7 +80,7 @@
 {% endstylesheet %}
 
 {% javascript %}
-  const swiperEl = document.querySelector('swiper-container');
+  const swiperEl1 = document.querySelector('swiper-container-01');
 
   // swiper parameters
   const swiperParams = {
@@ -102,7 +101,7 @@
   };
 
   // now we need to assign all parameters to Swiper element
-  Object.assign(swiperEl, swiperParams);
+  Object.assign(swiperEl1, swiperParams);
 
   // and now initialize it
   swiperEl.initialize();
